<resources>
    <string name="app_name">Culinary Blog</string>
    <string name="nav_recipes">Рецепты</string>
    <string name="nav_articles">Статьи</string>
    <string name="nav_create">Создать</string>
    <string name="nav_drafts">Черновики</string>
    <string name="nav_profile">Профиль</string>
    <string name="filters_action">Фильтры</string>
    <string name="filters_title">Выбор фильтров</string>
    <string name="filters_cooking_time_min">Время готовки от (мин)</string>
    <string name="filters_cooking_time_max">Время готовки до (мин)</string>
    <string name="filters_calories_min">Калории от</string>
    <string name="filters_calories_max">Калории до</string>
    <string name="filters_tags">Теги</string>
    <string name="filters_apply">Применить</string>
    <string name="filters_cancel">Отменить</string>
    <string name="filters_reset">Сбросить</string>
    <string name="filters_tags_empty">Теги не найдены</string>
    <string name="scroll_to_top">Наверх</string>
    <string name="view_stub_title">Добро пожаловать в Culinary Blog</string>
    <string name="view_stub_message">Интерфейс переведен на обычные Views. Выберите пункт нижней навигации, чтобы увидеть соответствующий экран.</string>
    <string name="recipes_stub_message">Здесь будет список рецептов в традиционном View-оформлении. Пока показываем текст-заглушку.</string>
    <string name="articles_stub_message">Экран статей будет отображаться здесь после реализации на Views.</string>
    <string name="create_stub_message">Раздел создания записей появится здесь. Используйте Views для ввода данных.</string>
    <string name="drafts_stub_message">Здесь будут ваши черновики.</string>
    <string name="profile_stub_message">Здесь будет ваш профиль. Экран готов для реализации на обычных Views.</string>
    <string name="error_like_failed">Не удалось поставить лайк.</string>
    <string name="recipes_subtitle">Свежие рецепты и подборки прямо из базы данных.</string>
    <string name="articles_subtitle">Новые статьи и посты из базы данных.</string>
    <string name="error_loading">Не удалось загрузить ленту. Проверьте сервер.</string>
    <string name="error_posting_comment">Не удалось отправить комментарий. Попробуйте ещё раз.</string>
    <string name="empty_posts">Публикаций пока нет.</string>
    <string name="post_type_recipe">Рецепт</string>
    <string name="post_type_article">Пост</string>
    <string name="card_title_placeholder">Без названия</string>
    <string name="card_excerpt_placeholder">Описание скоро появится.</string>
    <string name="card_meta_placeholder">Автор • Время приготовления</string>
    <string name="author_unknown">Автор</string>
    <string name="published_unknown">Дата не указана</string>
    <string name="cooking_time_placeholder">время неизвестно</string>
    <string name="calories_placeholder">калории не указаны</string>
    <string name="views_placeholder">0</string>
    <string name="likes_placeholder">0</string>
    <string name="cooking_time_format">%1$d мин</string>
    <string name="calories_format">%1$d ккал</string>
    <string name="views_format">%1$d</string>
    <string name="likes_format">%1$d</string>
    <string name="ingredients_title">Ингредиенты</string>
    <string name="steps_title">Шаги приготовления</string>
    <string name="comments_title">Комментарии</string>
    <string name="comment_author_you">Вы</string>
    <string name="comments_stub">Здесь пока нет комментариев. Оставьте первый!</string>
    <string name="steps_stub">Шаги рецепта скоро появятся.</string>
    <string name="ingredients_stub">Список ингредиентов пока не указан.</string>
    <string name="content_title">Содержание</string>
    <string name="content_stub">Полный текст поста появится позже.</string>
    <string name="create_title">Создание поста</string>
    <string name="create_type_label">Тип публикации</string>
    <string name="create_type_recipe">Рецепт</string>
    <string name="create_type_article">Статья</string>
    <string name="create_title_hint">Заголовок</string>
    <string name="create_excerpt_hint">Краткое описание</string>
    <string name="create_content_hint">Основной текст</string>
    <string name="create_cover_hint">Ссылка на обложку (опционально)</string>
    <string name="create_cover_pick">Из галереи</string>
    <string name="create_cover_capture">Сделать фото</string>
    <string name="create_cooking_time">Время, мин</string>
    <string name="create_calories">Калории</string>
    <string name="create_tags_label">Теги</string>
    <string name="create_search_hint">Поиск</string>
    <string name="create_search_button">Искать</string>
    <string name="create_tags_empty">Теги не найдены</string>
    <string name="create_select_tags">Выбрать теги</string>
    <string name="create_selected_tags_title">Выбранные теги</string>
    <string name="create_tags_clear">Очистить</string>
    <string name="create_ingredients_label">Ингредиенты</string>
    <string name="create_add_ingredient">Добавить ингредиент</string>
    <string name="create_ingredients_empty">Ингредиенты не найдены</string>
    <string name="create_selected_ingredient">Выбранный ингредиент</string>
    <string name="create_steps_label">Шаги рецепта</string>
    <string name="create_add_step">Добавить шаг</string>
    <string name="create_status_label">Статус</string>
    <string name="create_submit">Сохранить</string>
    <string name="create_choose_ingredient">Выберите ингредиент</string>
    <string name="create_amount_hint">Кол-во</string>
    <string name="create_unit_hint">Ед.</string>
    <string name="create_remove">Убрать</string>
    <string name="create_step_hint">Описание шага</string>
    <string name="create_step_image_hint">Ссылка на изображение (опционально)</string>
    <string name="create_fill_required">Заполните обязательные поля</string>
    <string name="create_ingredient_error">Выберите ингредиенты и количество</string>
    <string name="create_step_error">Заполните шаги или удалите пустые</string>
    <string name="create_upload_error">Не удалось загрузить изображение</string>
    <string name="create_uploading">Загружаем фото…</string>
    <string name="create_upload_success">Изображение добавлено</string>
    <string name="create_success">Пост сохранён</string>
    <string name="create_login_required">Необходимо войти, чтобы создавать посты</string>
    <string name="create_draft_saved_offline">Черновик сохранён на устройстве. Отправьте его, когда будет интернет.</string>
    <string name="create_error_generic">Ошибка создания поста</string>
    <string name="create_draft_load_error">Не удалось загрузить черновик</string>
    <string name="draft_save_error">Не удалось сохранить черновик</string>
    <string name="create_save_draft">Сохранить черновик</string>
    <string name="draft_delete_success">Черновик удалён</string>
    <string name="draft_delete_error">Не удалось удалить черновик</string>
    <string name="status_draft">Черновик</string>
    <string name="status_published">Опубликован</string>
    <string name="create_loading_tags">Загрузка тегов</string>
    <string name="create_loading_ingredients">Загрузка ингредиентов</string>
    <string name="create_loading_submit">Отправка рецепта</string>
    <string name="action_like">Поставить лайк</string>
    <string name="action_unlike">Убрать лайк</string>
    <string name="action_liked">Лайк поставлен</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="action_save">Сохранить</string>
    <string name="comments_replying">Ответ на выбранный комментарий</string>
    <string name="comments_cancel_reply">Отмена</string>
    <string name="comments_hint">Добавьте комментарий…</string>
    <string name="comments_send">Отправить</string>
    <string name="comment_edit_title">Редактировать комментарий</string>
    <string name="comment_edit_empty_error">Комментарий не может быть пустым</string>
    <string name="comment_edit_updated">Комментарий обновлён</string>
    <string name="comment_edit_failed">Не удалось обновить комментарий</string>
    <string name="comment_modify_forbidden">Можно изменять только свои комментарии</string>
    <string name="comment_deleted">Комментарий удалён</string>
    <string name="comment_delete_error">Не удалось удалить комментарий</string>
    <string name="comment_delete_confirm_title">Удалить комментарий?</string>
    <string name="comment_delete_confirm_message">Это действие удалит комментарий и ответы на него.</string>
    <string name="auth_title">Вход или регистрация</string>
    <string name="auth_tab_login">Вход</string>
    <string name="auth_tab_register">Регистрация</string>
    <string name="auth_username">Имя пользователя</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_password_repeat">Повторите пароль</string>
    <string name="auth_login">Войти</string>
    <string name="auth_register">Создать аккаунт</string>
    <string name="auth_ready">Готово! Можно вернуться назад.</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_followers">Подписчики</string>
    <string name="profile_following">Подписки</string>
    <string name="profile_posts">Посты</string>
    <string name="profile_posts_with_count">Посты (%1$d)</string>
    <string name="profile_posts_empty">Публикаций нет</string>
    <string name="profile_liked">Понравившиеся</string>
    <string name="profile_likes">Лайки</string>
    <string name="profile_drafts">Черновики</string>
    <string name="profile_tab_published">Опубликованные</string>
    <string name="profile_logout">Выйти</string>
    <string name="profile_empty">Здесь пока пусто</string>
    <string name="profile_user_stub">Гость</string>
    <string name="profile_email_stub">email не указан</string>
    <string name="profile_open_drafts">Перейти к черновикам</string>
    <string name="profile_change_avatar">Изменить аватар</string>
    <string name="profile_display_name">Отображаемое имя</string>
    <string name="profile_username">Имя пользователя</string>
    <string name="profile_email_label">Email</string>
    <string name="profile_save">Сохранить</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="profile_avatar_content_description">Текущий аватар</string>
    <string name="profile_avatar_read_error">Не удалось прочитать выбранное изображение</string>
    <string name="offline_feed_message">Нет подключения. Показаны сохранённые данные.</string>
    <string name="action_retry">Повторить</string>
    <string name="profile_offline_message">Профиль показан из кеша, проверьте подключение для обновления.</string>
    <string name="profile_subscribe">Подписаться</string>
    <string name="profile_unsubscribe">Отписаться</string>
    <string name="profile_subscription_updated">Статус подписки изменён</string>
    <string name="profile_back">Назад</string>
    <string name="post_action_edit_hint">Редактирование поста будет доступно позже</string>
    <string name="post_action_delete_hint">Удаление поста будет доступно позже</string>
    <string name="post_edit_load_error">Не удалось загрузить пост для редактирования</string>
    <string name="post_delete_confirm_title">Удалить пост?</string>
    <string name="post_delete_confirm_message">Вы уверены, что хотите удалить эту публикацию?</string>
    <string name="post_delete_success">Пост удалён</string>
    <string name="post_delete_error">Не удалось удалить пост</string>
    <string name="admin_panel_title">Административная панель</string>
    <string name="admin_close">Закрыть</string>
    <string name="admin_tab_posts">Посты</string>
    <string name="admin_tab_ingredients">Ингредиенты</string>
    <string name="admin_tab_tags">Теги</string>
    <string name="admin_tab_users">Пользователи</string>
    <string name="admin_search_posts">Поиск (заголовок)</string>
</resources>