<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="6dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_step_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputStepDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/create_step_image_hint"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputStepImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPickStepImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_cover_pick" />

        <Space
            android:layout_width="@dimen/create_horizontal_space"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonCaptureStepImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_cover_capture" />
        </LinearLayout>

    <ImageView
        android:id="@+id/stepImagePreview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/step_item_image_height"
        android:layout_marginTop="@dimen/step_item_image_margin_top"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_image_placeholder"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonRemoveStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/create_remove" />
</LinearLayout>
